--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel = "stylesheet" href = "styles.css">
+  <script src = "lib/jquery.js"></script>
   <title>Frontend Mentor | [Challenge Name Here]</title>
 </head>
 <body>
