Added OOP to social media dashboard

--- a/index.html
+++ b/index.html
@@ -17,33 +17,7 @@
   Dark Mode
 
 
-  <div id = "social-media-dashboard">
-    <div class = "social-media-audience">
-      <h2 id = "username">@nathanf</h2>
-      <h1 id = "followers">1987</h1>
-      <p>Followers</p>
-      <p class = "count">12 Today</p>
-    </div>
-    <div class = "social-media-audience">
-      <h2 id = "username">@nathanf</h2>
-      <h1 id = "followers">1044</h1>
-      <p>Followers</p>
-      <p class = "count">99 Today</p>
-    </div>
-    <div class = "social-media-audience">
-      <h2 id = "username">@realnathanf</h2>
-      <h1 id = "followers">11k</h1>
-      <p>Followers</p>
-      <p class = "count">1099 Today</p>
-    </div>
-    <div class = "social-media-audience">
-      <h2 id = "username">Nathan F.</h2>
-      <h1 id = "followers">8239</h1>
-      <p>Subscribers</p>
-      <p class = "count">144 Today</p>
-    </div>
-
-  </div>
+  <div id = "social-media-dashboard"></div>
 
   <div id = "overview-dashboard">
     <h1 id = "overview-heading">Overview - Today</h1>
