--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
   <title>Frontend Mentor | [Challenge Name Here]</title>
 </head>
 <body>
+<div id = "app">
 
-  Social Media Dashboard
-  Total Followers: 23,004
-
-  Dark Mode
-
+  <div id = "heading">
+    <h1 id = "overview-heading">Social Media Dashboard</h1>
+    <h2 id = "total-followers">Total Followers: 23,004</h2>
+    <p>Dark Mode</p>
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    </label>
+  </div>
 
   <div id = "social-media-dashboard"></div>
 
@@ -23,6 +28,7 @@
     <h1 id = "overview-heading">Overview - Today</h1>
   </div>
 
+</div>
   <script src = "app.js"></script>
 </body>
 </html>
