--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel = "stylesheet" href = "styles.css">
   <script src = "lib/jquery.js"></script>
@@ -15,18 +14,19 @@
   <div id = "heading">
     <h1 id = "overview-heading">Social Media Dashboard</h1>
     <h2 id = "total-followers">Total Followers: 23,004</h2>
-    <p>Dark Mode</p>
-    <label class="switch">
+    <div class = "switch-box">
+      <p>Dark Mode</p>
+      <label class="switch">
       <input type="checkbox">
       <span class="slider round"></span>
     </label>
+    </div>
   </div>
 
   <div id = "social-media-dashboard"></div>
 
-  <div id = "overview-dashboard">
-    <h1 id = "overview-heading">Overview - Today</h1>
-  </div>
+  <h1 id = "overview-heading">Overview - Today</h1>
+  <div id = "overview-dashboard"></div>
 
 </div>
   <script src = "app.js"></script>
