--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel = "stylesheet" href = "styles.css">
   <script src = "lib/jquery.js"></script>
   <title>Frontend Mentor | [Challenge Name Here]</title>
@@ -11,11 +13,13 @@
 <body>
 <div id = "app">
 
-  <div id = "heading">
-    <h1 id = "overview-heading">Social Media Dashboard</h1>
-    <h2 id = "total-followers">Total Followers: 23,004</h2>
+  <div id = "heading-container">
+    <div class = "heading-info">
+      <h1 id = "overview-heading">Social Media Dashboard</h1>
+      <h2 id = "total-followers">Total Followers: 23,004</h2>
+    </div>
     <div class = "switch-box">
-      <p>Dark Mode</p>
+      <p class = "dark-text">Dark Mode</p>
       <label class="switch">
       <input type="checkbox">
       <span class="slider round"></span>
