--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel = "stylesheet" href = "styles.css">
   <script src = "lib/jquery.js"></script>
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor</title>
 </head>
 <body>
 <div id = "app">
