Completed 1440px screen layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div id = "heading-container">
     <div class = "heading-info">
-      <h1 id = "overview-heading">Social Media Dashboard</h1>
+      <h1 id = "header-heading">Social Media Dashboard</h1>
       <h2 id = "total-followers">Total Followers: 23,004</h2>
     </div>
     <div class = "switch-box">
