--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src = "lib/jquery.js"></script>
   <title>Frontend Mentor</title>
 </head>
-<body>
+<body class = "light-theme || dark-theme">
 <div id = "app">
 
   <div id = "heading-container">
@@ -21,7 +21,7 @@
     <div class = "switch-box">
       <p class = "dark-text">Dark Mode</p>
       <label class="switch">
-      <input type="checkbox">
+      <input type = "checkbox" id = "dark-mode-button" checked>
       <span class="slider round"></span>
     </label>
     </div>
