Polished styling. Added new stylesheet for dark mode

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel = "stylesheet" href = "styles.css">
+  <link rel = "stylesheet" href = "styles-dark.css">
   <script src = "lib/jquery.js"></script>
   <title>Frontend Mentor</title>
 </head>
 <body class = "light-theme || dark-theme">
 <div id = "app">
 
-  <div id = "heading-container">
+  <div id = "heading-container" class = "light-theme || dark-theme">
     <div class = "heading-info">
-      <h1 id = "header-heading">Social Media Dashboard</h1>
-      <h2 id = "total-followers">Total Followers: 23,004</h2>
+      <h1 id = "header-heading" class = "light-theme || dark-theme">Social Media Dashboard</h1>
+      <h2 id = "total-followers" class = "light-theme || dark-theme">Total Followers: 23,004</h2>
     </div>
     <div class = "switch-box">
       <p class = "dark-text">Dark Mode</p>
