--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel = "stylesheet" href = "styles.css">
   <link rel = "stylesheet" href = "styles-dark.css" id="theme-link">
   <script src = "lib/jquery.js"></script>
-  <title>Frontend Mentor</title>
+  <title>Social Media Dashboard</title>
 </head>
 <body>
 <div id = "app">
